--- a/dashboard.html
+++ b/dashboard.html
@@ -12,23 +12,23 @@
 
 <div id="app"></div>
 
-<script id="dob-template" type="text/x-handlebars-template">
-  <form>
-    <h1 id="dob" class="age-label">When were you born?</h1>
+<script id="dob-template" type="text/template">
+  <form class="onboarding-form">
+    <h1 class="age-label">When were you born?</h1>
+    <input type="date" name="dob" id="dob">
 
-    <footer>
-      <input type="date" name="dob" id="dob">
-      <button type="submit">Motivate</button>
-    </footer>
-  <form>
+    <h1 class="color-label">Choose your new tab background color</h1>
+    <input type="color" name="bgcolor" id="bgcolor" value="#202020">
+
+    <button type="submit">Motivate Me</button>
+  </form>
 </script>
 
-<script id="age-template" type="text/x-handlebars-template">
+<script id="age-template" type="text/template">
   <h1 class="age-label">AGE</h1>
   <h2 class="count">{{year}}<sup>.{{milliseconds}}</sup></h2>
 </script>
 
-<script src="js/handlebars.js"></script>
 <script src="app/app.js"></script>
 
 </body>
